# gateway

./: .env.template  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEMO.md  Dockerfile  README.md  RELEASE.md  cliff.toml  dist-workspace.toml  fly.toml  render.yaml
.cargo/: config.toml
.github/workflows/: docker.yml  release.yml  rust-ci.yml
ai-gateway/: Cargo.toml
ai-gateway/config/: helicone-cloud.yaml  load-test.yaml  local-cloud.yaml  local.yaml  sidecar.yaml
ai-gateway/config/embedded/: model-mapping.yaml  providers.yaml
ai-gateway/src/: app.rs  app_state.rs  cache.rs  db_listener.rs  lib.rs  main.rs  minio.rs  s3.rs
ai-gateway/tests/: auth.rs  cache.rs  direct_proxy.rs  error_format.rs  health_check.rs  health_monitor.rs  load_balance.rs  logger.rs  passthrough.rs  rate_limit.rs  rate_limit_combinations.rs  rate_limit_monitor.rs  redis_cache.rs  redis_rate_limit_combinations.rs  retries.rs  single_provider.rs  unified_api.rs  weighted_balance.rs
benchmarks/: README.md
benchmarks/0.2.0-beta.8/: machine.md  results.md
benchmarks/suite/: large-request-body.js  test.js
crates/dynamic-router/: Cargo.toml
crates/latency-router/: Cargo.toml
crates/latency-router/src/router/: make.rs  mod.rs
crates/mock-server/: Cargo.toml
crates/telemetry/: Cargo.toml
crates/weighted-balance/: Cargo.toml
examples/python/: README.md
examples/typescript/: README.md  index.ts  package.json
infrastructure/: compose.yaml  create-fly-infra.sh  deploy.sh
infrastructure/ai-gateway/: fly.toml
infrastructure/grafana/: config-production.yaml  datasources-production.yaml  fly.toml
infrastructure/loki/: fly.toml
infrastructure/mock-server/: fly.toml
infrastructure/opentelemetry-collector/: config-production.yaml  fly.toml
infrastructure/prometheus/: fly.toml
infrastructure/redis/: fly.toml
infrastructure/schemas/: README.md  helicone_keys.sql  provider_keys.sql
infrastructure/tempo/: fly.toml
scripts/: README.md
scripts/python-example/: pyproject.toml
scripts/test/: Cargo.toml
scripts/trace-test-client/: Cargo.toml
scripts/typescript-example/: index.ts  package.json
(+172 files in other folders)
