[package]
name = "latency-router"
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
version = { workspace = true }
description = "Route request to the service with the lowest latest"
homepage = "https://docs.helicone.ai/ai-gateway/overview"
publish = false

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
tower = { workspace = true, features = ["discover", "ready-cache", "load"] }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
