[package]
name = "weighted-balance"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true
description = "Weighted load balancing algorithms for the LLM proxy router"
homepage = "https://docs.helicone.ai/ai-gateway/overview"
publish = false

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
rand = { workspace = true }
tower = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }

[lints]
workspace = true
